--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
       <footer>
         This project was coded by
-        <a href="" target="_blank">Nicolla Shikwambana</a>,
+        <a href="https://github.com/nicolla-s" target="_blank">Nicolla Shikwambana</a>,
         is
-        <a href="" target="_blank"
+        <a href="https://github.com/nicolla-s/forecast" target="_blank"
           >open-sourced on GitHub</a
         >
         and
-        <a href="" target="_blank"
+        <a href="https://app.netlify.com/projects/nicollasforecastapp/overview" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
